--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .container {
     width: 100%;
     height: 100vh;
-    background-image: url(/img/img-bg.png);
+    background-image: url(img/img-bg.png);
     background-size: cover;
     background-position: center;
     position: relative;
